--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tribute Page</title>
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="styles.css">
-   </head>
+  </head>
 
   <body>
     <main id="main">
@@ -19,9 +19,7 @@
         </p>
       </header>
       <figure id="img-div">
-        <img id="image"
-             alt="Gagarin in his helmet"
-             src="images/yuri-gagarin.jpg" />
+        <img id="image" alt="Gagarin in his helmet" src="images/yuri-gagarin.jpg" />
         <figcaption id="img-caption">
               On 12 April 1961, Yuri Gagarin became the first human to travel into space, launched into orbit on the Vostok 3KA-3 spacecraft (Vostok 1).
         </figcaption>
@@ -75,7 +73,7 @@
               <p>
                 Yuri inspired by ex-airman teacher.
               </p>
-            </li>  
+            </li>
             <li>
               <h2 class="subtitle">
                 1950
